--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "the-noun-project": "^2.0.1"
+    "node": "14.x"
   },
   "devDependencies": {
     "node-sass": "^4.5.2",
