--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
-    "the-noun-project": "^2.0.1"
+    "the-noun-project": "^2.0.1",
     "node": "14.x"
   },
   "devDependencies": {
